--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   "scripts": {
     "dev": "npm run watch-md && npm run docs:dev",
     "watch-md": "nodemon --watch './' --ext 'md'",
-    "docs:thirdpart": "npm run submodules && node ./script/before_build.js",
+    "docs:thirdpart": "npm run refer && node ./script/before_build.js",
     "docs:dev": " vitepress dev",
     "docs:build": "npm run docs:thirdpart && vitepress build",
     "docs:preview": "npm run docs:thirdpart && vitepress preview",
-    "submodules": "ts-node-esm ./script/gitmodules/index.js"
+    "refer": "ts-node-esm ./script/gitmodules/index.js refer",
+    "pages": "ts-node-esm ./script/gitmodules/index.js pages"
   },
   "dependencies": {},
   "devDependencies": {
